[SA|FI] added support for staring tomcat in debug mode, passing jvm args and system properties also did sanity checks on all  the ports